# Assignment4_team1

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  langgraph.json  pyproject.toml  run_agent.py  run_client.py  run_service.py
backend/agents/: agents.py  multi_modal_rag.py  research_assistant.py  tools.py
backend/agents/tools/: rag_tools.py
backend/config/: settings.py
backend/scripts/: codelab.py
backend/service/: service.py
backend/services/: pinecone_service.py
frontend/: Dockerfile  app.py  main.py  pyproject.toml
frontend/app_pages/: document_actions_page.py  documents_page.py
frontend/client/: client.py
frontend/services/: authentication.py  utils.py
poc/: langrapgh-agent.ipynb  langrapgh-agent.py  parsing.py  prop-2.ipynb  scraper.py
secrets copy/: gcp.json  private_key.pem  public_key.pem
