[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Pemmaraju Venkat Akash Varun <pemmaraju.v@northeastern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
requests = "^2.32.3"
streamlit-pdf-viewer = "^0.0.19"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
